tests/baselines/reference/ES5For-of28.errors.txt
ES5For-of28.ts(1,10): error TS2461: Type 'number' is not an array type.


==== ES5For-of28.ts (1 errors) ====
    for (let [a = 0, b = 1] of [2, 3]) {
             ~~~~~~~~~~~~~~
!!! error TS2461: Type 'number' is not an array type.
        a;
        b;
    }